--- a/static/assetsm&s/css/mentorship.css
+++ b/static/assetsm&s/css/mentorship.css
@@ -54,7 +54,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.5s;
   margin-top: 25px;
   color: #fff;
-  background: #49b5e7;
+  background: #211f5e;
   text-transform: uppercase;
 }
 #hero .btn-get-started:hover {
