--- a/static/assetsp/css/style.css
+++ b/static/assetsp/css/style.css
@@ -1,9 +1,3 @@
-/**
-* Template Name: Butterfly - v4.5.0
-* Template URL: https://bootstrapmade.com/butterfly-free-bootstrap-theme/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
 
 /*--------------------------------------------------------------
 # General
@@ -341,7 +335,7 @@ section {
 }
 
 .section-bg {
-  background-color: #f4fbfe;
+  background-color: #f9f9f9
 }
 
 .section-title {
