--- a/templates/incentives.html
+++ b/templates/incentives.html
@@ -18,10 +18,12 @@
 
 
     <link rel="stylesheet" href="{% static 'incentives.css' %}">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
   <link href="{% static 'navbar.css' %}" rel="stylesheet">
 
 </head>
-<body>
+<body style="background: #f9f9f9;">
 <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
@@ -75,7 +77,7 @@
       </div>
       <div class="back">
         <div>
-          <p style="font-size: smaller;"> TOP FINALIST TEAMS SHALL GET THE OPPORTUNITY TO GET 3 MONTHS LONG PRE INCUBATION AT TBI-BITS Pilani Hyderabad AND SUBSEQUENTLY A PITCHING OPPORTUNITY TO FURTHER AVAIL INCUBATION SUPPORT ( THE PARTICULAR TEAMS SELECTED SHALL BE AT THE DISCRETION OF TBI-BITS Pilani Hyderabad.</p>
+          <p style="font-size: smaller;"> Top finalist teams shall get the opportunity to get 3 months long pre incubation at TBI _BITS Pilani, Hyderabad and subsequently a pitching opportunity OPPORTUNITY TO FURTHER AVAIL INCUBATION SUPPORT ( THE PARTICULAR TEAMS SELECTED SHALL BE AT THE DISCRETION OF TBI-BITS Pilani Hyderabad.</p>
         
         </div>
       </div></a><a class="card" href="#!">
@@ -89,7 +91,7 @@
         </div>
       </div></a><a class="card" href="#!">
       <div class="front" style="background-image: url(../static/incentivesImg/ACC-PROGRAM.png)">
-        <p>Accelaration program</p>
+        <p>Acceleration program</p>
       </div>
       <div class="back">
         <div>
@@ -120,8 +122,8 @@
           </div>
         </div></a>
       <a class="card" href="#!">
-        <div class="front" style="background-image: url(../static/incentivesImg/ib.jpg)">
-          <p>Mentorship program '20</p>
+        <div class="front" style="background-image: url(../static/incentivesImg/startup_experts.jpg)">
+          <p>Mentorship program '21</p>
         </div>
         <div class="back">
           <div>
@@ -201,6 +203,17 @@
                         </div>
                       </div></a>
   </div>
+<hr style="margin: 0 auto; margin-top: 20px; width: 80%; color: #211f5e;">
+      <div class="col-md-12" style="text-align: center; color: #211f5e; position: relative; padding: 20px 0 10px">
+                <p> Follow Us &nbsp - &nbsp
+                      <a class="contactparalinks" href="https://twitter.com/Abhyuday_IITB" style="text-decoration:none;color: #211f5e;"><i class="fab fa-twitter"></i></a> &nbsp
+                      <a class="contactparalinks" href="https://www.instagram.com/iitbombay_abhyuday/" style="text-decoration:none;color: #211f5e;"><i class="fab fa-instagram"></i></a> &nbsp
+                      <a class="contactparalinks" href="https://www.facebook.com/abhyuday.iitb/" style="text-decoration:none;color: #211f5e;"><i class="fab fa-facebook-f"></i></a> &nbsp
+                      <a class="contactparalinks" href="https://www.youtube.com/c/AbhyudayIITBombay" style="text-decoration:none;color: #211f5e;"><i class="fab fa-youtube"></i></a> &nbsp
+                      <a class="contactparalinks" href="https://www.linkedin.com/company/abhyuday-iit-bombay/" style="text-decoration:none;color: #211f5e;"><i class="fab fa-linkedin-in"></i></a>
+                </p>
+
+      </div>
         
 </body>
 </html>
