--- a/templates/mentorship.html
+++ b/templates/mentorship.html
@@ -23,47 +23,12 @@
   <!-- Template Main CSS File -->
   <link href="{% static 'assetsm&s/css/mentorship.css' %}" rel="stylesheet">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
   <link href="{% static 'navbar.css' %}" rel="stylesheet">
-
-    <style>
-        /*--------------------------------------------------------------
-# Sections General
---------------------------------------------------------------*/
-section {
-  overflow: hidden;
-  background-color: #f9f9f9;
-}
-        .section-title{
-           text-align: center;
-  padding-bottom: 30px;
-        }
-
-.section-title h2 {
-  font-size: 32px;
-  font-weight: bold;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  position: relative;
-}
-.section-title h2::after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 50px;
-  height: 3px;
-  background: #5846f9;
-  bottom: 0;
-  left: calc(50% - 25px);
-}
-.section-title p {
-  margin-bottom: 0;
-}
-    </style>
 </head>
 
 
-<body>
+<body style="background: #f9f9f9;">
 
 <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
@@ -97,7 +62,6 @@ section {
     <div class="container">
       <div class="row">
         <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1>Mentorship</h1>
           <h2>Mentors stand to gain the satisfaction of making a difference in a fledgling entrepreneur's life and contributing back to society. In addition, they also get to keep in touch with new technologies, people, and networks by working with the young entrepreneurs.Action plan teams come from different parts of the country and thus through this competition, mentors are able to get in touch with the local problems prevailing elsewhere in the country.</h2>
             <div class="col-sm-12">
               <h2>As a mentor, you will not only guide students in developing an action plan of a particular social problem but also you will get an exposure of many social clashes and issues happening in different localities of India. You will be mentoring around 2-3 teams working in a sector that aligns with your field of work. The interaction with the teams will be online and the time invested would be around 1 to 2 hours per week.To know more, contact us</h2>
@@ -112,14 +76,14 @@ section {
   </section>
   <!-- End Hero -->
 
-<hr style="margin: 0 auto; margin-top: 20px; width: 80%; color: #fff;">
-      <div class="col-md-12" style="text-align: center; color: #fff; position: relative; padding: 20px 0 10px">
+<hr style="margin: 0 auto; margin-top: 20px; width: 80%; color: #1d1d1d;">
+      <div class="col-md-12" style="text-align: center; color: #1d1d1d; position: relative; padding: 20px 0 10px">
                 <p> Follow Us &nbsp - &nbsp
-                      <a class="contactparalinks" href="https://twitter.com/Abhyuday_IITB" style="text-decoration:none;color: #fff;"><i class="fab fa-twitter"></i></a> &nbsp
-                      <a class="contactparalinks" href="https://www.instagram.com/iitbombay_abhyuday/" style="text-decoration:none;color: #fff;"><i class="fab fa-instagram"></i></a> &nbsp
-                      <a class="contactparalinks" href="https://www.facebook.com/abhyuday.iitb/" style="text-decoration:none;color: #fff;"><i class="fab fa-facebook-f"></i></a> &nbsp
-                      <a class="contactparalinks" href="https://www.youtube.com/c/AbhyudayIITBombay" style="text-decoration:none;color: #fff;"><i class="fab fa-youtube"></i></a> &nbsp
-                      <a class="contactparalinks" href="https://www.linkedin.com/company/abhyuday-iit-bombay/" style="text-decoration:none;color: #fff;"><i class="fab fa-linkedin-in"></i></a>
+                      <a class="contactparalinks" href="https://twitter.com/Abhyuday_IITB" style="text-decoration:none;color: #1d1d1d;"><i class="fab fa-twitter"></i></a> &nbsp
+                      <a class="contactparalinks" href="https://www.instagram.com/iitbombay_abhyuday/" style="text-decoration:none;color: #1d1d1d;"><i class="fab fa-instagram"></i></a> &nbsp
+                      <a class="contactparalinks" href="https://www.facebook.com/abhyuday.iitb/" style="text-decoration:none;color: #1d1d1d;"><i class="fab fa-facebook-f"></i></a> &nbsp
+                      <a class="contactparalinks" href="https://www.youtube.com/c/AbhyudayIITBombay" style="text-decoration:none;color: #1d1d1d;"><i class="fab fa-youtube"></i></a> &nbsp
+                      <a class="contactparalinks" href="https://www.linkedin.com/company/abhyuday-iit-bombay/" style="text-decoration:none;color: #1d1d1d;"><i class="fab fa-linkedin-in"></i></a>
                 </p>
 
       </div>
