--- a/templates/partners.html
+++ b/templates/partners.html
@@ -116,7 +116,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Sponsors</h2>
+          <h2 style="color: #211f5e">Sponsors</h2>
         </div>
         <div class="container" style="align-items: center; justify-content: center;">
           <div class="row">
@@ -176,7 +176,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Partners</h2>
+          <h2 style="color: #211f5e">Partners</h2>
         </div>
 
         <div class="row">
