--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -248,8 +248,7 @@
                   </div>
                   <div class="col-md-9">
                       <h2>Home</h2>
-                      <p><em>TEAM NAME -</em> Name<br><em>TEAM ID -</em>AP3456<br>
-                          Lorem ipsum <em>dolor sit amet</em>, consectetur adipiscing elit. <em>Sed vehicula blandit augue,</em> eu maximus odio tempus vitae.</p>
+                      <p><em>TEAM NAME -</em> {{user.team_name}}<br><em>TEAM ID - </em>{{user.username}}<br>
                       <div class="main-btn"><a href="{% url 'actionplan:team-edit' %}">Update Details</a></div>
                       <div class="fb-btn"><a href="{% url 'actionplan:logout' %}">Logout</a></div>
                   </div>
