--- a/templates/partners.html
+++ b/templates/partners.html
@@ -121,13 +121,13 @@
         <div class="container" style="align-items: center; justify-content: center;">
           <div class="row">
             <div class="col-lg-12">
-                <div class="separator"><h3 style="font-weight:200">&nbsp;Title Sponsor&nbsp;</h3></div>
+                <div class="separator"><h3 style="font-weight:200;">&nbsp;Title Sponsor&nbsp;</h3></div>
                 <a href="https://www.schaeffler.co.in/"><img class="center mainsponser" src="{% static 'assetsp/img/sponsors/Title-Sponsor.jpg' %}" alt="sponsor"></a>
-                <p style="text-align: center;">
-                  <a href="https://www.twitter.com/schaefflergroup" style="text-decoration:none; color: #fa5252"><i class="fab fa-twitter"></i></a> &nbsp
-                  <a href="https://www.instagram.com/schaefflergroup/" style="text-decoration:none; color: #fa5252"><i class="fab fa-instagram"></i></a> &nbsp
-                  <a href="https://www.facebook.com/SchaefflerIndia/" style="text-decoration:none; color: #fa5252"><i class="fab fa-facebook-f"></i></a> &nbsp
-                  <a href="https://www.linkedin.com/company/schaeffler" style="text-decoration:none; color: #fa5252"><i class="fab fa-linkedin-in"></i></a>
+                <p style="text-align: center;font-size: 1.5rem;margin-top: 11px;">
+                  <a href="https://www.twitter.com/schaefflergroup" style="text-decoration:none; color: #211f5e;"><i class="fab fa-twitter"></i></a> &nbsp
+                  <a href="https://www.instagram.com/schaefflergroup/" style="text-decoration:none; color: #211f5e;"><i class="fab fa-instagram"></i></a> &nbsp
+                  <a href="https://www.facebook.com/SchaefflerIndia/" style="text-decoration:none; color: #211f5e;"><i class="fab fa-facebook-f"></i></a> &nbsp
+                  <a href="https://www.linkedin.com/company/schaeffler" style="text-decoration:none; color: #211f5e;"><i class="fab fa-linkedin-in"></i></a>
                 </p>
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -135,14 +135,14 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-                <div class="separator"><h3 style="font-weight:200">&nbsp;Associate Sponsor&nbsp;</h3></div>
+                <div class="separator"><h3 style="font-weight:200;">&nbsp;Associate Sponsor&nbsp;</h3></div>
                 <a href="https://www.oxfamindia.org/"><img class="center mainsponser" src="{% static 'assetsp/img/sponsors/Associate Sponsor.png' %}" alt="sponsor"></a>
-                <p style="text-align: center;">
-                  <a href="https://twitter.com/OxfamIndia" style="text-decoration:none; color: #fa5252"><i class="fab fa-twitter"></i></a> &nbsp
-                  <a href="https://www.instagram.com/oxfam_india/?hl=en" style="text-decoration:none; color: #fa5252"><i class="fab fa-instagram"></i></a> &nbsp
-                  <a href="https://www.facebook.com/oxfamindia/" style="text-decoration:none; color: #fa5252"><i class="fab fa-facebook-f"></i></a> &nbsp
-                  <a href="https://www.youtube.com/channel/UCv8JJT5rA0mt7f76FZaxIuw" style="text-decoration:none; color: #fa5252"><i class="fab fa-youtube"></i></a> &nbsp
-                  <a href="https://www.linkedin.com/company/oxfam-india/" style="text-decoration:none; color: #fa5252"><i class="fab fa-linkedin-in"></i></a>
+                <p style="text-align: center;font-size: 1.5rem;margin-top: 11px;">
+                  <a href="https://twitter.com/OxfamIndia" style="text-decoration:none; color: #211f5e"><i class="fab fa-twitter"></i></a> &nbsp
+                  <a href="https://www.instagram.com/oxfam_india/?hl=en" style="text-decoration:none; color: #211f5e"><i class="fab fa-instagram"></i></a> &nbsp
+                  <a href="https://www.facebook.com/oxfamindia/" style="text-decoration:none; color: #211f5e"><i class="fab fa-facebook-f"></i></a> &nbsp
+                  <a href="https://www.youtube.com/channel/UCv8JJT5rA0mt7f76FZaxIuw" style="text-decoration:none; color: #211f5e"><i class="fab fa-youtube"></i></a> &nbsp
+                  <a href="https://www.linkedin.com/company/oxfam-india/" style="text-decoration:none; color: #211f5e"><i class="fab fa-linkedin-in"></i></a>
                 </p>
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -150,13 +150,13 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-                <div class="separator"><h3 style="font-weight:200">&nbsp;Powered By&nbsp;</h3></div>
+                <div class="separator"><h3 style="font-weight:200";>&nbsp;Powered By&nbsp;</h3></div>
                 <a href="https://iocl.com/"><img class="center mainsponser" src="{% static 'assetsp/img/sponsors/Powered By.png' %}" alt="sponsor"></a>
-                <p style="text-align: center;">
-                  <a href="https://www.twitter.com/indianOilcl" style="text-decoration:none; color: #fa5252"><i class="fab fa-twitter"></i></a> &nbsp
-                  <a href="https://www.instagram.com/indianoilcorp" style="text-decoration:none; color: #fa5252"><i class="fab fa-instagram"></i></a> &nbsp
-                  <a href="https://www.facebook.com/IndianOilCorpLimitedps://www.facebook.com/SchaefflerIndia/" style="text-decoration:none; color: #fa5252"><i class="fab fa-facebook-f"></i></a> &nbsp
-                  <a href="https://www.linkedin.com/company/indian-oil-corp-limited" style="text-decoration:none; color: #fa5252"><i class="fab fa-linkedin-in"></i></a>
+                <p style="text-align: center;font-size: 1.5rem;margin-top: 11px;">
+                  <a href="https://www.twitter.com/indianOilcl" style="text-decoration:none; color: #211f5e"><i class="fab fa-twitter"></i></a> &nbsp
+                  <a href="https://www.instagram.com/indianoilcorp" style="text-decoration:none; color: #211f5e"><i class="fab fa-instagram"></i></a> &nbsp
+                  <a href="https://www.facebook.com/IndianOilCorpLimitedps://www.facebook.com/SchaefflerIndia/" style="text-decoration:none; color: #211f5e"><i class="fab fa-facebook-f"></i></a> &nbsp
+                  <a href="https://www.linkedin.com/company/indian-oil-corp-limited" style="text-decoration:none; color: #211f5e"><i class="fab fa-linkedin-in"></i></a>
                 </p>
             </div> <!-- end of col -->
           </div> <!-- end of row -->
